# cabal_sample_repository

./: CHANGELOG.md  LICENSE  mydemohaskell.cabal
app/: Another.hs  Main.hs
src/: Lib.hs
test/: Test.hs
